# imgprocessor

./: .gitignore  CMakeLists.txt  README.md  cppan.yml  main.cc
.cppan/: CMakeLists.txt  checks.yml  helpers.cmake
include/: CMakeCache.txt  Makefile  cmake_install.cmake  config.cmake  config.cmake.cppan.once  status.h  tesseract.h
include/exports/: cppan.cmake
src/: main.cc  tesseract.cc
